--- a/src/components/Sidenav/style.css
+++ b/src/components/Sidenav/style.css
@@ -1,1 +1,7 @@
+.sidenav-border {
+    border-right: 2px solid orange;
+}
 
+.sidenav {
+    /* background-color: #f9f9ed; */
+}
